# mcc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mcc.cfg
data/: assets.cfg
data/model/: test.qb
docs/: concept.md
src/mcc/: config.cpp  config.hpp  entry.cpp  result.hpp
src/mcc/data/: font.hpp  handle.hpp  loader.cpp  loader.hpp  manager.cpp  manager.hpp  model.cpp  model.hpp  qb_parser.cpp  qb_parser.hpp
src/mcc/entity/: bounding_box.hpp  entity.cpp  entity.hpp
src/mcc/gl/: debug.cpp  debug.hpp  deferred_renderer.cpp  deferred_renderer.hpp  index_buffer.cpp  index_buffer.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  usage.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  voxel.cpp  voxel.hpp
src/mcc/map/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  generation.cpp  generation.hpp  generator.cpp  generator.hpp  loader.hpp  terrain.cpp  terrain.hpp
src/mcc/memory/: endianness.hpp
src/mcc/ui/: camera.cpp  camera.hpp
